# receipt-input-app

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_STATUS.md  README.md  SETUP_COMPLETE.md  TESTING_COLUMN_MAPPING.md  pyproject.toml  pytest.ini  requirements.txt  test_column_api.sh
.specify/memory/: constitution.md
backend/src/api/middleware/: file_validation.py
backend/src/api/v1/: auth.py  column_config.py  save.py  upload.py
backend/src/models/: column_mapping.py  extracted_data.py  google_sheets_row.py  receipt.py  user_preference.py
backend/src/services/: cleanup_service.py  column_validator.py  ocr_service.py  parser_service.py  sheets_service.py
backend/src/storage/: temp_storage.py
backend/tests/: conftest.py
backend/tests/contract/: test_auth_contract.py  test_column_config_get.py  test_column_config_post.py  test_column_validate.py  test_save_contract.py  test_upload_contract.py
backend/tests/integration/: test_upload_flow.py
frontend/src/: main.py
frontend/src/templates/: base.html  column_config.html  review.html  setup.html  upload.html
shared/: user_preferences.json
specs/001-feature-receipt-processing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-feature-receipt-processing/contracts/: auth-api.yaml  save-api.yaml  upload-api.yaml
specs/002-feature-select-column/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-feature-select-column/contracts/: get-column-mappings.json  save-column-mappings.json  validate-column-reference.json
(+8 files in other folders)
