[project]
name = "receipt-input-app"
version = "0.1.0"
description = "Receipt Processing Web App with OCR and Google Sheets integration"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["backend/tests", "frontend/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["backend/src", "frontend/src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/test_*.py"
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = []
